samples/telemetry_v1alpha1_logpipeline_otel_input_application.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-sink-otel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-sink
  namespace: log-sink-otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-sink
  strategy: {}
  template:
    metadata:
      labels:
        app: log-sink
    spec:
      volumes:
      - name: config
        configMap:
          name: log-sink-config
      securityContext:
        fsGroup: 101
      containers:
      - image: otel/opentelemetry-collector-contrib:latest
        name: collector
        volumeMounts:
        - name: config
          mountPath: /etc/collector
        args:
        - --config=/etc/collector/config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: log-sink
  namespace: log-sink-otel
spec:
  ports:
  - name: grpc-otlp
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: http-otlp
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app: log-sink
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-gen-otel
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-gen
  namespace: log-gen-otel
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-gen
  template:
    metadata:
      labels:
        app: log-gen
    spec:
      containers:
      - image: mingrammer/flog:latest
        name: flog
        args:
        - -b=64
        - -f=json
        - -l
