samples/telemetry_v1beta1_logpipeline_fluentbit.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-sink-fluentbit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-sink
  namespace: log-sink-fluentbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-sink
  template:
    metadata:
      labels:
        app: log-sink
      name: log-sink
    spec:
      containers:
      - args:
        - -i http
        - -o stdout
        - -q
        image: fluent/fluent-bit:latest
        livenessProbe:
          tcpSocket:
            port: http-ingest
        name: log-sink
        ports:
        - containerPort: 9880
          name: http-ingest
          protocol: TCP
        readinessProbe:
          tcpSocket:
            port: http-ingest
---
apiVersion: v1
kind: Service
metadata:
  name: log-sink
  namespace: log-sink-fluentbit
spec:
  ports:
  - name: http-ingest
    port: 9880
    protocol: TCP
    targetPort: http-ingest
  selector:
    app: log-sink
---
apiVersion: v1
kind: Namespace
metadata:
  name: log-gen-fluentbit
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-gen
  namespace: log-gen-fluentbit
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-gen
  template:
    metadata:
      labels:
        app: log-gen
    spec:
      containers:
      - image: mingrammer/flog:latest
        name: flog
        args:
        - -d=50ms
        - -b=64
        - -f=json
        - -l
