samples/telemetry_v1beta1_tracepipeline.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: trace-sink
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-sink
  namespace: trace-sink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-sink
  strategy: {}
  template:
    metadata:
      labels:
        app: trace-sink
    spec:
      volumes:
      - name: config
        configMap:
          name: trace-sink-config
      securityContext:
        fsGroup: 101
      containers:
      - image: otel/opentelemetry-collector-contrib:latest
        name: collector
        volumeMounts:
        - name: config
          mountPath: /etc/collector
        args:
        - --config=/etc/collector/config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: trace-sink
  namespace: trace-sink
spec:
  ports:
  - name: grpc-otlp
    port: 4317
    protocol: TCP
    targetPort: 4317
  - name: http-otlp
    port: 4318
    protocol: TCP
    targetPort: 4318
  selector:
    app: trace-sink
---
apiVersion: v1
kind: Namespace
metadata:
  name: trace-gen
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trace-gen
  namespace: trace-gen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trace-gen
  strategy: {}
  template:
    metadata:
      labels:
        app: trace-gen
    spec:
      containers:
      - command:
        - /telemetrygen
        - traces
        - --otlp-endpoint
        - telemetry-otlp-traces.kyma-system:4317
        - --otlp-insecure
        - --duration
        - 1h
        - --rate
        - "10"
        image: ghcr.io/open-telemetry/opentelemetry-collector-contrib/telemetrygen:latest
        name: telemetrygen
