samples/networkpolicy-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress-and-egress
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
